hard-gists/6483510/run.log
=== Docker Run Log for 6483510 ===
Started at: Mi 29. Okt 16:33:13 CET 2025

[2025-10-29 16:33:13] START: Running container for 6483510
[2025-10-29 16:33:14] SUCCESS: Container 22c1f79b090b9ca2e24e24f4f9cccfa7d2e5b75c25812790a88f005f0aa24385 started for 6483510
=== Container logs for 6483510 ===
  File "/snippet.py", line 38
    print 'Wrote %s (%s bytes)' % (filename,len(data))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6483510 ===
[2025-10-29 16:33:16] INFO: Container 22c1f79b090b9ca2e24e24f4f9cccfa7d2e5b75c25812790a88f005f0aa24385 has stopped
